--- a/reception/style.css
+++ b/reception/style.css
@@ -1555,7 +1555,7 @@ hr.invis1 {
     width: 100%;
     height: 100%;
     position: relative;
-    background: url("uploads/code.jpg") no-repeat;
+   /* background: url("uploads/code.jpg") no-repeat;*/
 }
 
 .design-wrapper {
@@ -1576,7 +1576,7 @@ hr.invis1 {
     position: relative;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    background: url("uploads/design.jpg") no-repeat;
+   /* background: url("uploads/design.jpg") no-repeat;*/
 }
 
 
@@ -2086,9 +2086,9 @@ select.mobile-device {
 }
 
 .contact_form {
-    border: 1px solid #ededed;
+   /* border: 1px solid #ededed;
     box-shadow: 0 5px 14px rgba(0, 0, 0, 0.1);
-    background-color: #f2f3f5;
+    background-color: #f2f3f5;*/
     padding: 40px 30px;
 	border-radius: 2px;
 }
@@ -2159,7 +2159,7 @@ select.mobile-device {
     font-weight: 400;
     font-size: 20px;
     text-transform: capitalize;
-    line-height: !important;
+    /*line-height:!important;*/
 }
 
 .footer {
@@ -2406,7 +2406,7 @@ select.mobile-device {
     color: #999 !important;
     margin: 0 !important;
     padding: 0 !important;
-    line-height: 1 !important:
+    line-height: 1 !important;
 }
 
 .stat-wrap p {
@@ -2415,7 +2415,7 @@ select.mobile-device {
     margin: 0;
     font-weight: 300;
     padding: 4px 0 0;
-    line-height: 1 !important:
+    line-height: 1 !important;
 }
 
 #preloader {
