数据库更新，前台页面更新

--- a/reception/css/versions.css
+++ b/reception/css/versions.css
@@ -168,7 +168,7 @@ body.realestate_version .contact_form h3 i {
 }
 
 body.realestate_version .contact_form h3 {
-    margin: 0 0 10px;
+   /* margin: 0 0 10px;*/
     display: block;
 }
 
