--- a/reception/web/resource/css/slideshow.css
+++ b/reception/web/resource/css/slideshow.css
@@ -10,24 +10,7 @@ body, html {
   list-style: none;
   z-index: 1;
 }
-.slideshow li span {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  color: transparent;
-  background-size: cover;
-  background-position: 50% 50%;
-  background-repeat: none;
-  opacity: 0;
-  z-index: 0;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-animation: imageAnimation 24s linear infinite 0s;
-  -moz-animation: imageAnimation 24s linear infinite 0s;
-  animation: imageAnimation 24s linear infinite 0s;
-}
+
 .slideshow li h3 {
   position: absolute;
   text-align: center;
@@ -44,6 +27,7 @@ body, html {
   -moz-animation: titleAnimation 24s linear 1 0s;
   animation: titleAnimation 24s linear 1 0s;
 }
+
 @media only screen and (min-width: 768px) {
   .slideshow li h3 {
     bottom: 30px;
@@ -56,29 +40,20 @@ body, html {
   }
 }
 
-.slideshow li:nth-child(1) span {
-  background-image: url(../uploads/slider_01.jpg);
-}
-
-.slideshow li:nth-child(2) span {
-  background-image: url(../uploads/slider_02.jpg);
-  -webkit-animation-delay: 6s;
-  -moz-animation-delay: 6s;
-  animation-delay: 6s;
-}
-
-.slideshow li:nth-child(3) span {
-  background-image: url(../uploads/slider_03.jpg);
-  -webkit-animation-delay: 12s;
-  -moz-animation-delay: 12s;
-  animation-delay: 12s;
-}
-
-.slideshow li:nth-child(4) span {
-  background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/203277/spring-slide.jpg);
-  -webkit-animation-delay: 18s;
-  -moz-animation-delay: 18s;
-  animation-delay: 18s;
+.slideshow li span {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: transparent;
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  opacity: 0;
+  z-index: 0;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 @-webkit-keyframes imageAnimation {
