--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -754,6 +754,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
 }
 
 .owl-carousel .owl-item img{
+    width: auto;
 	display: block;
 	margin: 0 auto;
 }
