--- a/reception/web/resource/css/colors.css
+++ b/reception/web/resource/css/colors.css
@@ -11,7 +11,7 @@
 .icon-wrapper:hover a,
 a:hover,
 a:focus {
-    color: #2750ff
+    color: #00A2E9
 }
 
 
@@ -21,9 +21,9 @@ GRADIENTS
 
 .grd1-trans {
     background: rgb(219, 0, 206);
-    background: -moz-linear-gradient(top, rgba(219, 0, 206, 0.6) 0%, rgba(39, 80, 255, 0.6) 100%);
-    background: -webkit-linear-gradient(top, rgba(219, 0, 206, 0.6) 0%, rgba(39, 80, 255, 0.6) 100%);
-    background: linear-gradient(to bottom, rgba(219, 0, 206, 0.6) 0%, rgba(39, 80, 255, 0.6) 100%);
+    background: -moz-linear-gradient(top, rgba(219, 0, 206, 0.6) 0%, rgba(0,162,233, 0.6) 100%);
+    background: -webkit-linear-gradient(top, rgba(219, 0, 206, 0.6) 0%, rgba(0,162,233, 0.6) 100%);
+    background: linear-gradient(to bottom, rgba(219, 0, 206, 0.6) 0%, rgba(0,162,233, 0.6) 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#db00ce', endColorstr='#2750ff', GradientType=0);
 }
 
@@ -35,9 +35,9 @@ GRADIENTS
 .grd1 {
     color: #ffffff;
     background: #db00ce;
-    background: -moz-linear-gradient(left, #db00ce 0%, #2750ff 100%);
-    background: -webkit-linear-gradient(left, #db00ce 0%, #2750ff 100%);
-    background: linear-gradient(to right, #db00ce 0%, #2750ff 100%);
+    background: -moz-linear-gradient(left, #db00ce 0%, #00A2E9 100%);
+    background: -webkit-linear-gradient(left, #db00ce 0%, #00A2E9 100%);
+    background: linear-gradient(to right, #db00ce 0%, #00A2E9 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#db00ce', endColorstr='#2750ff', GradientType=1);
 }
 
@@ -59,9 +59,9 @@ GRADIENTS
 .grd1:focus {
     background-position: 100px;
     color: #ffffff;
-    background: #2750ff;
-    background: -moz-linear-gradient(left, #2750ff 0%, #db00ce 100%);
-    background: -webkit-linear-gradient(left, #2750ff 0%, #db00ce 100%);
-    background: linear-gradient(to right, #2750ff 0%, #db00ce 100%);
+    background: #00A2E9;
+    background: -moz-linear-gradient(left, #00A2E9 0%, #db00ce 100%);
+    background: -webkit-linear-gradient(left, #00A2E9 0%, #db00ce 100%);
+    background: linear-gradient(to right, #00A2E9 0%, #db00ce 100%);
     filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#2750ff', endColorstr='#db00ce', GradientType=1);
 }
