--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -435,7 +435,7 @@ a img.aligncenter {
 
 .header_style_01 .navbar-default .navbar-nav > li:hover a,
 .header_style_01 .navbar-default .navbar-nav > li:focus a {
-    background-color: #076799;
+    background-color: #00A2E9;
 	color: #ffffff;
 }
 
@@ -445,7 +445,7 @@ body.realestate_version .social-links:hover a{
 }
 
 .header_style_01 .navbar-default .navbar-nav > li a.active {
-	background-color: #076799;
+	background-color: #00A2E9;
 	color: whitesmoke!important;
 	border-radius: 2px;
 }
@@ -558,13 +558,13 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option button
 	line-height: 43px;
 	width: 45px;
 	color: #fff;
-	background: #a8cf45;
+	background: #00A2E9;
 	border: none;
 	transition: all .3s ease-in-out;
 	border-radius: 2px;
 }
 body.realestate_version .header_style_01 .navbar-right > li.search-option button.search:hover{
-	background: #076799;
+	background: #00A2E9;
 }
 body.realestate_version .header_style_01 .navbar-right > li.search-option form.dropdown-menu{
 	position: absolute;
@@ -595,7 +595,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
 	display: block;
 	width: 48px;
 	color: #fff;
-	background: #a8cf45;
+	background: #00A2E9;
 	border: 1px solid #fff;
 	border-left: none;
 	line-height: 40px;
@@ -678,7 +678,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
 }
 
 .section.color1 {
-    background-color: #448AFF;
+    background-color: #00A2E9;
 }
 
 .first-section {
@@ -1118,7 +1118,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
 }
 
 .top-feature .center .single-feature, .top-feature .single-feature:hover {
-    border-bottom-color: #a8cf45;
+    border-bottom-color: #00A2E9;
 }
 
 
@@ -1288,7 +1288,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
     position: absolute;
     top: 20px;
     right: 12px;
-	background: #a8cf45;
+	background: #00A2E9;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
@@ -1307,7 +1307,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
     z-index: 4;
     color: #fff;
     text-align: left;
-    background: #a8cf45;
+    background: #00A2E9;
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
@@ -1442,7 +1442,7 @@ body.realestate_version .header_style_01 .navbar-right > li.search-option form b
 }
 
 .hoverbutton {
-    background-color: #a8cf45;
+    background-color: #00A2E9;
     position: absolute;
     color: #1f1f1f !important;
     top: 48%;
@@ -2200,7 +2200,7 @@ select.mobile-device {
 
 .footer-links a:hover,
 .footer a:hover {
-    color: #a8cf45;
+    color: #00A2E9;
 }
 
 .footer-links li {
@@ -2340,7 +2340,7 @@ select.mobile-device {
 }
 
 .footer-distributed .footer-company-name a:hover{
-	color: #a8cf45;
+	color: #00A2E9;
 }
 
 
@@ -2364,7 +2364,7 @@ select.mobile-device {
 }
 
 .dmtop {
-    background-color: #a8cf45;
+    background: rgba(0,0,0,0.6);
     z-index: 100;
     width: 50px;
     height: 50px;
@@ -2423,7 +2423,7 @@ select.mobile-device {
     right: 0;
     bottom: 0;
     left: 0;
-    background: #a8cf45;
+    background: rgba(0,0,0,0.6);
     z-index: 11000;
     position: fixed;
     display: block;
@@ -2587,7 +2587,7 @@ select.mobile-device {
 }
 
 #breadcrumbs {
-	background: #a8cf45;
+	background: #00A2E9;
 	padding: 10px 20px;
     position: absolute;
     right: 0px;
@@ -2615,7 +2615,7 @@ select.mobile-device {
 	color: #ffffff;
 }
 #breadcrumbs:hover ul li a{
-	color: #a8cf45;
+	color: #00A2E9;
 }
 #breadcrumbs ul li:first-child::before {
 	display: none;
@@ -2649,7 +2649,7 @@ select.mobile-device {
 	display: block;
 	font-size: 28px;
 	color: #ffffff;	
-	background: #a8cf45;
+	background: #00A2E9;
 	width: 48px;
 	height: 48px;
 	line-height: 48px;
