--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -2721,6 +2721,63 @@ select.mobile-device {
     background: #07689B;
 }
 
+.name {
+    font-size: 26px;
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.num option {
+    display: none;
+}
+
+.resultPower, .ruleNum {
+    text-align: center;
+    line-height: 55px;
+    color: #BCBCBC !important;
+    padding: 0 !important;
+}
+
+.upRule, .addRule {
+    display: block;
+    margin: 0 auto 10px 1rem;
+    text-align: center;
+    border: 0;
+    border-radius: 4px;
+    line-height: 4rem;
+    width: 8rem;
+    color: #f5f5f5;
+    background: #00A2E9;
+}
+
+.addRule {
+    margin: 0 1rem 10px auto;
+    background: orange;
+}
+
+.delRule {
+    height: 55px;
+    width: 100%;
+    color: #F23F3F !important;
+    margin-bottom: 20px;
+    font-size: 18px;
+    line-height: 55px;
+    text-align: center;
+    font-weight: 600;
+    border: 1px solid #ebebeb;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.cost {
+    display: none;
+}
+
+.cost td {
+    text-align: center;
+}
+
 
 
 
