--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -2721,7 +2721,7 @@ select.mobile-device {
     background: #07689B;
 }
 
-.name {
+.adawdwadawd {
     font-size: 26px;
     width: 100%;
     text-align: center;
