--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -2813,6 +2813,7 @@ select.mobile-device {
 .cost td {
     text-align: center;
     vertical-align: middle !important;
+    padding: 4px!important;
 }
 
 
