--- a/reception/web/resource/css/responsive.css
+++ b/reception/web/resource/css/responsive.css
@@ -635,6 +635,9 @@
     }
 }
 @media (width: 360px) {
+    .contact_form {
+        padding:0;
+    }
     .slideshow li span {
         height: 124.4%;
     }
