--- a/reception/web/resource/css/responsive.css
+++ b/reception/web/resource/css/responsive.css
@@ -611,15 +611,20 @@
         padding: 20px 20px;
     }
 }
+@media (max-width: 500px) {
+    .contact_form {
+        padding: 10px 10px;
+    }
+}
 @media (max-width: 400px) {
+    .contact_form {
+        padding:0;
+    }
     .slideshow li span {
         height: 91.8%;
     }
 }
 @media (width: 435px) {
-    .contact_form {
-        padding: 10px 10px;
-    }
     .slideshow li span {
         height: 103%;
     }
@@ -635,9 +640,6 @@
     }
 }
 @media (width: 360px) {
-    .contact_form {
-        padding:0;
-    }
     .slideshow li span {
         height: 124.4%;
     }
