--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -2810,6 +2810,10 @@ select.mobile-device {
     cursor: pointer;
 }
 
+.row{
+    margin: 0!important;
+}
+
 .cost td {
     text-align: center;
     vertical-align: middle !important;
