--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -2669,8 +2669,8 @@ select.mobile-device {
     right: 0;
     top: 0;
     bottom: 0;
-    width: 58%;
-    height: 44%;
+    width: 52%;
+    height: 32rem;
     background: url("/resource/images/pop.jpg") no-repeat center;
     background-size: 100% 100%;
     opacity: 1;
@@ -2681,26 +2681,28 @@ select.mobile-device {
 
 @media (max-width: 1120px) {
     .pop{
-        width: 82%;
-        height: 32%;
+        width: 76%;
     }
 }
 
 @media (max-width: 768px) {
-
+    .pop{
+        width: 82%;
+        height: 30rem;
+    }
 }
 
 @media (max-width: 500px) {
     .pop{
         width: 82%;
-        height: 28%;
+        height: 18rem;
     }
 }
 
 @media (max-width: 400px) {
     .pop{
         width: 92%;
-        height: 26%;
+        height: 16rem;
     }
 }
 
