--- a/reception/web/resource/css/versions.css
+++ b/reception/web/resource/css/versions.css
@@ -121,7 +121,7 @@ body.realestate_version .property-detail i {
 }
 
 body.realestate_version .header_style_01 {
-    background-color: rgba(255, 255, 255);
+    background-color: rgba(68,68,68,0.29);
 }
 
 body.realestate_version .contact_form .grd1 {
