--- a/reception/web/resource/style.css
+++ b/reception/web/resource/style.css
@@ -509,7 +509,7 @@ li.social-links a {
     top: 0px;
     width: 100%;
     padding: 0px 0px;
-    background: #ffffff;
+    background: rgba(0,0,0,0.6);
     z-index: 0;
     transition: all 500ms ease;
     -moz-transition: all 500ms ease;
@@ -543,7 +543,7 @@ li.social-links a {
 
 .fixed-menu .navbar-default {
     padding: 15px 30px;
-    box-shadow: 0 0 8px 0 rgba(0, 0, 0, .12);
+    box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.66);
 }
 
 body.realestate_version .header_style_01 .navbar-right > li.search-option {
