--- a/platform/web/resources/css/login.css
+++ b/platform/web/resources/css/login.css
@@ -1,62 +1,216 @@
+
 *{
 	padding: 0px;
 	margin: 0px;
 }
-.clear {
-    clear: both;
+/*longin-start*/
+.loninContaner .login_bg{
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: .6;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1003;
 }
-#login{
-	width: 1130px;
-    height: 588px;
-    background: yellow;
-    margin: 0 auto;
-    margin-top: 50px;
-    background: url(../image/long1.jpg)no-repeat center center;
+.loninContaner .login_form{
+	width: 380px;
+	height: 520px;
+	background: #fff;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);/*x,y值，实现块元素百分比下居中*/
+	z-index: 1008;
+	border-radius: 3px;
 }
-.long_center{
-	width: 400px;
-    height: 400px;
-    background: #444;
-	border-radius: 10px;
-    float: right;
+.loginCont i{
+    cursor: pointer;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    padding: 4px;
 }
-.logoin_top{
-	width: 360px;
-	height: 44px;
-	padding-bottom: 6px;
-	margin: 0px 18px;
-	border-bottom: solid 2px #FF6600;
+.loninContaner .loginCont{
+	width: 300px;
+	height: 400px;
+	margin: auto;
+	margin-top: 45px;
 }
-.logoin_top li{
-	float: left;
-	color: #fff;
+.loninContaner .loginCont .login_tit{
+    color: #101d37;
+	font:600 20px/30px "微软雅黑";
 }
-.logoin_top .login_left{
-	float: left;
-	font: bold 20px/40px "宋体";
+.loninContaner .loginCont .login_txt{
+    color: #aaa;
+    padding: 40px 0 0;
+    line-height: 1;
+    font-size: 14px;
+    margin-bottom: 40px;
 }
-.logoin_top .login_right{
+.log_input{
+	position: relative;
+    top: 0;
+    left: 0;
+}
+.log_input li .top_border{
+    border-radius: 3px 3px 0 0;
+}
+.log_input li .btm_border{
+    border-radius: 0 0 3px 3px ;
+}
+.log_input li .inputs{
+    width: 282px;
+    height: 50px;
+    color: #101d37;
+    font: 14px/50px "微软雅黑";
+    outline: none;
+    padding-left: 16px;
+    border: 1px solid #DBDBDB;
+}
+.log_input li .img_ioc{
+	display: inline-block;
+    width: 125px;
+    height: 49px;
+    position: absolute;
+    top: 54px;
+    right: 3px;
+}
+.log_input li .inpt_a{
+    width: 110px;
+    height: 49px;
+    position: absolute;
+    top: 106px;
+    right: 3px;
+  	line-height: 49px;
+   	text-align: center;
+}
+.inpt_a a{
+	font-size: 14px;
+    color:#101d37;
+    padding: 0 10px;
+}
+.li_btn button,.register_btn button,.forget_btn button,.change_btn button{
+	width: 300px;
+    height: 50px;
+    color: #fff;
+    font:bold 18px/50px "微软雅黑";
+    background: #3072F6;
+   	border: none;
+   	letter-spacing: 1em;
+   	border-radius: 3px;
+   	cursor: pointer;
+}
+.li_btn button{
+	margin-top: 55px;
+}
+.foot_link{
+	width: 300px;
+    height: 50px;
+    padding: 20px 0;
+}
+.foot_link .alink{
+	color: #0B57F0;
+	font-size: 14px;
+}
+.foot_link p{
+	color: #aaa;
+    margin-top: 10px;
+    font-size: 12px;
+    line-height: 14px;
+}
+.foot_link p a{
+	color: #aaa;
+}
+.foot_link p a:hover{
+	color: #0B57F0;
+}
+
+/*表单2*/
+.loginCont .login_rtxt{
+	color: #9399a5;
+    font:500 14px/28px "微软雅黑";
+    padding-left: 186px;
+    padding-bottom: 40px;
+}
+.eye i{
+	display: inline-block;
+	color: #9399a5;
+    font-size: 16px;
+    position: fixed;
+    top: 282px;
+    right: 50px;
+}
+.login_rtxt a{
+    color: #3072f6;
+}
+.check_btn{
+	font-size: 14px;
+	padding: 24px 0;
+}
+.register_btn button{
+   	margin-top: 15px;
+}
+
+/*表单3*/
+.loninContaner .login_forms{
+	width: 380px;
+	height: auto;
+	background: #fff;
+}
+.eyes i{
+	display: inline-block;
+	color: #9399a5;
+    font-size: 16px;
+    position: fixed;
+    top: 178px;
+    right: 50px;
+}
+.loginCont .login_a{
+    padding-left: 186px;
+    padding-bottom: 68px;
+}
+.loginCont .forget_pwd{
+	height: auto;
 	float: right;
-	font:13px/40px "微软雅黑";
+    padding: 24px 0;
+    font: 14px/23px "微软雅黑";
 }
-.logoin_top li a{
-	color: #FF6600;
-	text-decoration: none;
+.loginCont .forget_pwd a{
+	color: #101d37;
 }
-.logoin_top li a:hover{
-	color:#8C8C8C;
+
+/*表单4*/
+.loninContaner .login_modify{
+	width: 380px;
+	height: 468px;
+	background: #fff;
 }
-/*form开始*/
-.login_main{
-	width: 360px;
-	height: 300px;
-	padding: 20px 0;
-	color: #fff;
-	padding: 20px 0px;
-	margin: 0 auto;
+.phoneNum{
+    display: block;
+    color: #db4c3f;
+    padding: 20px 0 20px 0;
+    font-size: 14px;
+ 	opacity: 0.88;	
 }
-.login_main .username {
-    font: 16px Times New Roman;
-    height: 40px;
-    line-height: 40px;
-    margin: 35px 0;
+.change_btn .modify{
+	letter-spacing: 0;
+}
+/*longin-end*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
