--- a/platform/web/resources/css/index.css
+++ b/platform/web/resources/css/index.css
@@ -7,7 +7,7 @@
 .header {
     width: 100%;
     height: 566px;
-    padding-top: 34px;
+    padding-top: 20px;
     background: #333;
     /*background: #ccc url(../images/logo.png) no-repeat;*/
     position: relative;
@@ -172,6 +172,8 @@
 .main1_ul .small_tit {
     font-size: 12px;
     margin-top: 5px;
+    height: 20px;
+    line-height: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
@@ -226,6 +228,7 @@
 }
 
 .main1_ul2 .ul2_price {
+    height: 25px;
     color: #FA5741;
     font: bold 16px/25px "微软雅黑";
 }
@@ -293,6 +296,8 @@
 
 .main1_ul4 .ul4_smtit {
     color: #9399A5;
+    height: 20px;
+    line-height: 20px;
     font-size: 12px;
     max-width: 265px;
     overflow: hidden;
