--- a/platform/web/resources/css/login.css
+++ b/platform/web/resources/css/login.css
@@ -111,6 +111,7 @@
     padding: 20px 0;
 }
 .foot_link .alink{
+    cursor: pointer;
 	color: #0B57F0;
 	font-size: 14px;
 }
@@ -142,7 +143,8 @@
     top: 282px;
     right: 50px;
 }
-.login_rtxt a{
+.login_rtxt span{
+    cursor: pointer;
     color: #3072f6;
 }
 .check_btn{
@@ -177,8 +179,9 @@
     padding: 24px 0;
     font: 14px/23px "微软雅黑";
 }
-.loginCont .forget_pwd a{
+.loginCont .forget_pwd span{
 	color: #101d37;
+    cursor: pointer;
 }
 
 /*表单4*/
