--- a/platform/web/resources/css/index.css
+++ b/platform/web/resources/css/index.css
@@ -221,8 +221,9 @@
 .main1_ul2 .ul2_name {
     color: #101D37;
     height: 25px;
-    white-space: nowrap;
+    max-width: 280px;
     overflow: hidden;
+    white-space: nowrap;
     text-overflow: ellipsis;
     font: bold 18px/25px "微软雅黑";
 }
@@ -287,7 +288,7 @@
 
 .main1_ul4 .ul4_tit {
     color: #101D37;
-    /*height: 50px;*/
+    height: 50px;
     overflow: hidden;
     text-overflow: ellipsis;
     padding-top: 8px;
