--- a/platform/web/resources/css/login.css
+++ b/platform/web/resources/css/login.css
@@ -1,10 +1,11 @@
 
-*{
-	padding: 0px;
-	margin: 0px;
+* {
+    padding: 0px;
+    margin: 0px;
 }
+
 /*longin-start*/
-.loninContaner .login_bg{
+.loninContaner .login_bg {
     width: 100%;
     height: 100%;
     background-color: #000000;
@@ -14,53 +15,61 @@
     left: 0;
     z-index: 1003;
 }
-.loninContaner .login_form{
-	width: 380px;
-	height: 520px;
-	background: #fff;
-	position: fixed;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-50%);/*x,y值，实现块元素百分比下居中*/
-	z-index: 1008;
-	border-radius: 3px;
+
+.loninContaner .login_form {
+    width: 380px;
+    height: 520px;
+    background: #fff;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /*x,y值，实现块元素百分比下居中*/
+    z-index: 1008;
+    border-radius: 3px;
 }
-.loginCont i{
+
+.loginCont i {
     cursor: pointer;
     position: absolute;
     right: 15px;
     top: 15px;
     padding: 4px;
 }
-.loninContaner .loginCont{
-	width: 300px;
-	height: 400px;
-	margin: auto;
-	margin-top: 45px;
+
+.loninContaner .loginCont {
+    width: 300px;
+    height: 400px;
+    margin: auto;
+    margin-top: 45px;
 }
-.loninContaner .loginCont .login_tit{
+
+.loninContaner .loginCont .login_tit {
     color: #101d37;
-	font:600 20px/30px "微软雅黑";
+    font: 600 20px/30px "微软雅黑";
 }
-.loninContaner .loginCont .login_txt{
+
+.loninContaner .loginCont .login_txt {
     color: #aaa;
     padding: 40px 0 0;
     line-height: 1;
     font-size: 14px;
     margin-bottom: 40px;
 }
-.log_input{
-	position: relative;
+
+.log_input {
     top: 0;
     left: 0;
 }
-.log_input li .top_border{
+
+.log_input li .top_border {
     border-radius: 3px 3px 0 0;
 }
-.log_input li .btm_border{
-    border-radius: 0 0 3px 3px ;
+
+.log_input li .btm_border {
+    border-radius: 0 0 3px 3px;
 }
-.log_input li .inputs{
+
+.log_input li .inputs {
     width: 282px;
     height: 50px;
     color: #101d37;
@@ -69,137 +78,161 @@
     padding-left: 16px;
     border: 1px solid #DBDBDB;
 }
-.log_input li .img_ioc{
-	display: inline-block;
+
+.log_input li .img_ioc {
+    display: inline-block;
     width: 125px;
     height: 49px;
     position: absolute;
     top: 54px;
     right: 3px;
 }
-.log_input li .inpt_a{
+
+.log_input li .inpt_a {
+    cursor: pointer;
     width: 110px;
-    height: 49px;
+    height: 24px;
     position: absolute;
-    top: 106px;
+    top: 14px;
     right: 3px;
-  	line-height: 49px;
-   	text-align: center;
+    color: #a9a9a9;
+    border-left: 1px solid #a9a9a9;
+    line-height: 24px;
+    text-align: center;
 }
-.inpt_a a{
-	font-size: 14px;
-    color:#101d37;
+
+.inpt_a a {
+    font-size: 14px;
+    color: #101d37;
     padding: 0 10px;
 }
-.li_btn button,.register_btn button,.forget_btn button,.change_btn button{
-	width: 300px;
+
+.li_btn button, .register_btn button, .forget_btn button, .change_btn button {
+    width: 300px;
     height: 50px;
     color: #fff;
-    font:bold 18px/50px "微软雅黑";
+    font: bold 18px/50px "微软雅黑";
     background: #3072F6;
-   	border: none;
-   	letter-spacing: 1em;
-   	border-radius: 3px;
-   	cursor: pointer;
+    border: none;
+    letter-spacing: 1em;
+    border-radius: 3px;
+    cursor: pointer;
 }
-.li_btn button{
-	margin-top: 55px;
+
+.li_btn button {
+    margin-top: 55px;
 }
-.foot_link{
-	width: 300px;
+
+.foot_link {
+    width: 300px;
     height: 50px;
     padding: 20px 0;
 }
-.foot_link .alink{
+
+.foot_link .alink {
     cursor: pointer;
-	color: #0B57F0;
-	font-size: 14px;
+    color: #0B57F0;
+    font-size: 14px;
 }
-.foot_link p{
-	color: #aaa;
+
+.foot_link p {
+    color: #aaa;
     margin-top: 10px;
     font-size: 12px;
     line-height: 14px;
 }
-.foot_link p a{
-	color: #aaa;
+
+.foot_link p a {
+    color: #aaa;
 }
-.foot_link p a:hover{
-	color: #0B57F0;
+
+.foot_link p a:hover {
+    color: #0B57F0;
 }
 
 /*表单2*/
-.loginCont .login_rtxt{
-	color: #9399a5;
-    font:500 14px/28px "微软雅黑";
+.loginCont .login_rtxt {
+    color: #9399a5;
+    font: 500 14px/28px "微软雅黑";
     padding-left: 186px;
     padding-bottom: 40px;
 }
-.eye i{
-	display: inline-block;
-	color: #9399a5;
+
+.eye i {
+    position: absolute;
+    display: inline-block;
+    color: #9399a5;
     font-size: 16px;
-    position: fixed;
-    top: 282px;
-    right: 50px;
+    top: 13px;
+    right: 15px;
 }
-.login_rtxt span{
+
+.login_rtxt span {
     cursor: pointer;
     color: #3072f6;
 }
-.check_btn{
-	font-size: 14px;
-	padding: 24px 0;
+
+.check_btn {
+    font-size: 14px;
+    padding: 24px 0;
 }
-.register_btn button{
-   	margin-top: 15px;
+
+.register_btn button {
+    margin-top: 15px;
 }
 
 /*表单3*/
-.loninContaner .login_forms{
-	width: 380px;
-	height: auto;
-	background: #fff;
+.loninContaner .login_forms {
+    width: 380px;
+    height: auto;
+    background: #fff;
 }
-.eyes i{
-	display: inline-block;
-	color: #9399a5;
+
+.eyes i {
+    display: inline-block;
+    color: #9399a5;
     font-size: 16px;
     position: fixed;
     top: 178px;
     right: 50px;
 }
-.loginCont .login_a{
+
+.loginCont .login_a {
     padding-left: 186px;
     padding-bottom: 68px;
 }
-.loginCont .forget_pwd{
-	height: auto;
-	float: right;
+
+.loginCont .forget_pwd {
+    height: auto;
+    float: right;
     padding: 24px 0;
     font: 14px/23px "微软雅黑";
 }
-.loginCont .forget_pwd span{
-	color: #101d37;
+
+.loginCont .forget_pwd span {
+    color: #101d37;
     cursor: pointer;
 }
 
 /*表单4*/
-.loninContaner .login_modify{
-	width: 380px;
-	height: 468px;
-	background: #fff;
+.loninContaner .login_modify {
+    width: 380px;
+    height: 468px;
+    background: #fff;
 }
-.phoneNum{
+
+.phoneNum {
     display: block;
     color: #db4c3f;
     padding: 20px 0 20px 0;
     font-size: 14px;
- 	opacity: 0.88;	
+    opacity: 0.88;
 }
-.change_btn .modify{
-	letter-spacing: 0;
+
+.change_btn .modify {
+    letter-spacing: 0;
 }
+
 /*longin-end*/
 
 
