--- a/platform/web/resources/css/user.css
+++ b/platform/web/resources/css/user.css
@@ -26,12 +26,13 @@ body{
 	float: left;
 }
 .esc{
-	width: 100px;
+	width: 150px;
 	color: #fff;
 	float: right;
 }
 .esc a{
 	color: #fff;
+	text-decoration: none;
 }
 /*页头结束*/
 
@@ -43,7 +44,7 @@ body{
 	padding: 30px 0 0 0;
 }
 .user_contLt{
-	width: 150px;
+	width: 168px;
 	height: 268px;
 }
 .user_contRt{
@@ -57,14 +58,14 @@ body{
 .user_contLt img{
 	width: 80px;
 	height: 80px;
-	margin: 35px 35px 0 35px;
+	margin: 35px 44px 0 44px;
 }
 .welcome{
 	text-align: center;
     padding: 15px 0;
 }
 .user_contLt li a{
-	width: 152px;
+	width: 168px;
     color: #555;
     text-align: center;
     font: 14px/40px "微软雅黑";
