--- a/platform/web/resources/css/estimate.css
+++ b/platform/web/resources/css/estimate.css
@@ -1,130 +1,154 @@
-*{
-	padding: 0;
-	margin: 0;
+* {
+    padding: 0;
+    margin: 0;
 }
-.header{
-	width: 100%;
+
+.header {
+    width: 100%;
     height: 100px;
     background: #F5F5F6;
     padding: 30px 0 86px 0;
-}    
-.nav_logo img{
-	float: left;
 }
-.head_list li{
-	text-align: center;
-	font:bold 16px/32px "微软雅黑";
-	margin-left: 30px;
-	float: left;
+
+.nav_logo img {
+    float: left;
 }
-.head_list li a{
+
+.head_list li {
+    text-align: center;
+    font: bold 16px/32px "微软雅黑";
+    margin-left: 30px;
+    float: left;
+}
+
+.head_list li a {
     color: #333;
     text-decoration: none;
 }
+
 .head_list a.active {
     color: #3072f6;
 }
-.header .nav_tit{
-	color: #333;
-	text-align: center;
-	font: bold 33px/60px "微软雅黑";
-	padding-top: 30px;
+
+.header .nav_tit {
+    color: #333;
+    text-align: center;
+    font: bold 33px/60px "微软雅黑";
+    padding-top: 30px;
 }
-.nav_tit .sub_tit{
-	color: #878787;
-	text-align: center;
-	font: 16px/20px "微软雅黑";
+
+.nav_tit .sub_tit {
+    color: #878787;
+    text-align: center;
+    font: 16px/20px "微软雅黑";
 }
+
 /*头部结束*/
 
 /*估价表单开始*/
-.m_form{
-	width: 50%;
-	margin: auto;
-	margin-top: 50px;
+.m_form {
+    width: 50%;
+    margin: auto;
+    margin-top: 50px;
 }
-.form_list li{
-	padding: 10px 0;
-	border-bottom: solid 1px #ccc;
+
+.form_list li {
+    padding: 10px 0;
+    border-bottom: solid 1px #ccc;
 }
-.form_list li .list_names,input{
-	display: inline-block;
-	font:14px/40px "微软雅黑";
-	
+
+.form_list li .list_names, input {
+    display: inline-block;
+    font: 14px/40px "微软雅黑";
+
 }
-.form_list li .list_names{
-	width: 145px;
-	font-weight: bold;
+
+.form_list li .list_names {
+    width: 145px;
+    font-weight: bold;
 }
-.form_list li input{
-	border: none;
-	width: 500px;
+
+.form_list li input {
+    border: none;
+    width: 500px;
 }
-.form_list li select{
-	border: none;
-	width: 15%;
-	height: 40px;
-	border-radius: 1px;
+
+.form_list li select {
+    text-align: center;
+    text-align-last: center;
+    border: none;
+    width: 24%;
+    height: 40px;
+    border-radius: 1px;
     background-color: #f5f5f6;
     color: #aaa;
     font-size: 14px;
-    text-indent: 0.6rem;
+    padding: 0 2%;
     cursor: default; /*默认光标  通常是一个箭头*/
 }
-.avgm{
-	display: inline-block;
-	margin-right: 100px;
-	font-size: 14px;
+
+.avgm {
+    display: inline-block;
+    margin-right: 100px;
+    font-size: 14px;
 }
-.inputBox{
-	width: 500px;
-	height: 37px;
-	font-size: 12px;
-	margin-top: -37px;
-	margin-left: 145px;
+
+.inputBox {
+    width: 500px;
+    height: 37px;
+    font-size: 12px;
+    margin-top: -37px;
+    margin-left: 145px;
 }
-.inputBox li{
-	width: 124px;
-	line-height: 20px;
-	position: relative;
-	border: none;
-	float: left;
+
+.inputBox li {
+    width: 124px;
+    line-height: 20px;
+    position: relative;
+    border: none;
+    float: left;
 }
-.inputBox li .inputsx{
-	border: none;
-	width: 20px;
-	height: 15px;
-	display: inline-block;
+
+.inputBox li .inputsx {
+    border: none;
+    width: 20px;
+    height: 15px;
+    display: inline-block;
 }
-.inputBox li span{
-	width: 100px;
-	height: 18px;
-	display: inline-block;
-	position: absolute;
-	top: 7px;
-	left: 24px;
+
+.inputBox li span {
+    width: 100px;
+    height: 18px;
+    display: inline-block;
+    position: absolute;
+    top: 7px;
+    left: 24px;
 }
+
 /*估价表单结束*/
 
 /*去估价按钮*/
-.m_submit{
-	width: 20%;
-	margin: auto;
-	margin-top: 50px;
-	text-align: center;
+.m_submit {
+    width: 20%;
+    margin: auto;
+    margin-top: 50px;
+    text-align: center;
 }
-.btn_submit{
-	width: 100%;
-	height: 40px;
-	border: none;
-	border-radius: 3px;
-	color: #fff;
-	font: 14px/30px "微软雅黑";
-	background: #3072f6;;
-	cursor: pointer;
+
+.btn_submit {
+    width: 100%;
+    height: 48px;
+    border: none;
+    border-radius: 3px;
+    color: #fff;
+    font: 14px/30px "微软雅黑";
+    background: #3072f6;;
+    cursor: pointer;
 }
-.btn_text{
-	padding-top: 12px;
+
+.btn_text {
+    padding-top: 12px;
     color: #9399a5;
 }
+
 /*去估价按钮结束*/
