--- a/mobile/web/resources/css/index.css
+++ b/mobile/web/resources/css/index.css
@@ -174,7 +174,8 @@ body{
 }
 .redadat .tit{
     margin-bottom: 1rem;
-    line-height: 1.2em;
+	line-height: 2.8rem;
+	max-height: 5.6rem;
     overflow: hidden;
     font-size: 2.7rem;
     color: #101d37;
