--- a/mobile/web/resources/css/foundation_site.css
+++ b/mobile/web/resources/css/foundation_site.css
@@ -19,9 +19,9 @@
     margin: 0 0.5rem;
 }
 .siteCont1,.siteCont2{
-	width: 96%;
+	width: 100%;
+	margin: 0 auto;
 	height: 8rem;
-	padding: 1rem;
 	background: #F8F8F9;  
 	border-bottom: 0.1rem solid #ccc;
 }
@@ -31,16 +31,28 @@
 	text-align: center;
 	font: 2.35rem/8rem "微软雅黑";
 	float: left;
+	box-sizing: border-box;
+	padding: 1rem;
 }
 .siteCont2 p{
 	width: 33.3%;
 	height: 8rem;
 	text-align: center;
 	font: 2.15rem/2.6rem "微软雅黑";
+	word-wrap:break-word;
 	display: -webkit-box;/*多行文本超出隐藏用省略号代替*/
     -webkit-box-orient: vertical;/*多行文本超出隐藏用省略号代替*/
     -webkit-line-clamp: 3;/*多行文本超出隐藏用省略号代替*/
 	overflow: hidden;/*多行文本超出隐藏用省略号代替*/
 	float: left;
-	
+	box-sizing: border-box;
+	padding: 1rem;
+}
+
+.siteCont2 p>a{
+	width: 100%;
+	word-wrap:break-word;
+	display: -webkit-box;/*多行文本超出隐藏用省略号代替*/
+	-webkit-box-orient: vertical;/*多行文本超出隐藏用省略号代替*/
+	-webkit-line-clamp: 3;/*多行文本超出隐藏用省略号代替*/
 }
