--- a/mobile/web/resources/css/release_venue.css
+++ b/mobile/web/resources/css/release_venue.css
@@ -6,7 +6,6 @@
 	width: 100%;
 }
 .partnersBox{
-	width: 90%;
 	padding: 3rem;
 }
 .partnersTit{
@@ -19,13 +18,13 @@
 }
 .oldPwd span{
 	display: inline-block;
-	width: 28%;
+	width: 20%;
 	height: 10rem;
 	font: 2.3rem/10rem "微软雅黑";
 }
 .oldPwd input{
 	display: inline-block;
-	width: 67%;
+	width: 70%;
 	height: 6rem;
 	font-size: 2.2rem;
 	padding: 0 1rem;
@@ -41,6 +40,29 @@
 	text-align-last: center;
 	padding: 0 1rem;
 	border: .1rem solid #c8c8c8;
+}
+
+.oldPwd button{
+	width: 100%;
+	height: 7rem;
+	color: #fff;
+	text-align: center;
+	font: 2.3rem/7rem "微软雅黑";
+	border: none;
+	background-color: #3072f6;
+	margin-top: 1rem;
+}
+
+.oldPwd a{
+	display: block;
+	width: 100%;
+	height: 7rem;
+	color: #fff;
+	text-align: center;
+	font: 2.3rem/7rem "微软雅黑";
+	border: none;
+	background-color: red;
+	margin-top: 1rem;
 }
 
 /*ID card*/
